--- a/src/main/resources/templates/eServices2/FuncGroup/delete-func-group-result-success.html
+++ b/src/main/resources/templates/eServices2/FuncGroup/delete-func-group-result-success.html
@@ -24,12 +24,61 @@
             <div>
                 <!--<h1>createFuncGroup</h1>-->
 
+                <div>
+                    <div class="flex-container ">
+                        <div class="flex-item-auto func-tab" >
+                            <span class="func-tab-title" th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.func.detail')}"></span>
+                        </div>
+                        <div class="flex-item-1"></div>
+                    </div>
+                    <div class="func-border-frame">
+                        <div class="flex-container">
+                            <div class="flex-item-3 func-tab-padding-left">
+                                <b><span th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.func.funcGroupId')}"></span></b>
+                            </div>
+                            <div class="flex-item-7">
+                                <span th:text="${functionGroupCreateDTO.grpId}"></span>
+                            </div>
+                        </div>
+                        <div class="func-tab-padding-left func-tab-padding-right"><div class="RowSeparatorThin"></div></div>
+                        <div class="flex-container">
+                            <div class="flex-item-3 func-tab-padding-left">
+                                <b><span th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.func.description')}"></span></b>
+                            </div>
+                            <div class="flex-item-7">
+                                <span th:text="${functionGroupCreateDTO.groupDesc}"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div style="padding-top: 30px;">
+                    <div class="flex-container ">
+                        <div class="flex-item-auto func-tab" >
+                            <span class="func-tab-title" th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.func.title')}"></span>
+                        </div>
+                        <div class="flex-item-1"></div>
+                    </div>
+                    <div class="func-border-frame">
+                        <div class="flex-container">
+                            <div class="flex-item-3 func-tab-padding-left" style="padding-top: 20px;">
+                                <b><span th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.func.currFunc')}"></span></b>
+                            </div>
+                            <div class="flex-item-7">
+                                <div th:each="func  : ${currentFunc}">
+                                    <div th:text="${func.funcId + '(' + func.funcDesc + ')'}"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class = "deleteSuccess" style="padding-top: 20px;">
                     <span th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.func.deleteSuccess')}"></span>
                 </div>
 
                 <div style="padding-top: 20px;">
-                    <input class="SmallButtonStyle pointer" style="min-width: 80px;" type="button" th:value="${#messages.msg('umps.adminfunc.common.print')}" />
+                    <input class="SmallButtonStyle pointer" style="min-width: 80px;" type="button" th:onclick="'print()'" th:value="${#messages.msg('umps.adminfunc.common.print')}" />
                     <a class="DisableLinkUnderline" th:href="@{/e-Services-2/management/deleteFunctionGroup.do}">
                         <input class="SmallButtonStyle pointer" type="button" th:value="${#messages.msg('umps.adminfunc.func.eservices2.management.deletefuncgroup')}" />
                     </a>
