--- a/src/main/resources/templates/eServices2/FuncGroup/create-func-group.html
+++ b/src/main/resources/templates/eServices2/FuncGroup/create-func-group.html
@@ -114,27 +114,6 @@
                         <div class="func-border-frame">
                             <div class="flex-container">
                                 <div class="flex-item-3 func-tab-padding-left">
-                                    <b><span th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.func.availableFunc')}"></span></b>
-                                </div>
-                                <div class="flex-item-7">
-                                    <select class="func-select" multiple="" th:id ="availableFunctions" size="5" th:field ="*{availableFunctions}">
-                                        <option th:each ="function : ${availableFunctions}"
-                                                th:value="${function.funcId}"
-                                                th:text="${function.funcDesc}"></option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="flex-container">
-                                <div class="flex-item-3 func-tab-padding-left"></div>
-                                <div class="flex-item-7">
-                                    <div class="func-select-middle">
-                                        <img class="func-arrow" th:onclick="'copyToList(currentFunc.id, availableFunctions.id)'" th:src="@{/images/b_addImage.gif}" />
-                                        <img class="func-arrow" th:onclick="'copyToList(availableFunctions.id, currentFunc.id)'" th:src="@{/images/b_removeImage.gif}" />
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="flex-container">
-                                <div class="flex-item-3 func-tab-padding-left">
                                     <b><span th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.func.currFunc')}"></span></b>
                                 </div>
                                 <div class="flex-item-7">
@@ -144,6 +123,27 @@
                                             </select>
                                         </div>
                                     </div>
+                                </div>
+                            </div>
+                            <div class="flex-container">
+                                <div class="flex-item-3 func-tab-padding-left"></div>
+                                <div class="flex-item-7">
+                                    <div class="func-select-middle">
+                                        <img class="func-arrow" th:onclick="'copyToList(availableFunctions.id, currentFunc.id)'" th:src="@{/images/b_addImage.gif}" />
+                                        <img class="func-arrow" th:onclick="'copyToList(currentFunc.id, availableFunctions.id)'" th:src="@{/images/b_removeImage.gif}" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flex-container">
+                                <div class="flex-item-3 func-tab-padding-left">
+                                    <b><span th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.func.availableFunc')}"></span></b>
+                                </div>
+                                <div class="flex-item-7">
+                                    <select class="func-select" multiple="" th:id ="availableFunctions" size="5" th:field ="*{availableFunctions}">
+                                        <option th:each ="function : ${availableFunctions}"
+                                                th:value="${function.funcId}"
+                                                th:text="${function.funcDesc}"></option>
+                                    </select>
                                 </div>
                             </div>
                         </div>
