--- a/src/main/resources/templates/eServices2/FuncGroup/update-func-group-edit-success.html
+++ b/src/main/resources/templates/eServices2/FuncGroup/update-func-group-edit-success.html
@@ -59,9 +59,7 @@
                             </div>
                             <div class="flex-item-7">
                                 <div th:each="func  : ${currentFunc}">
-                                    <!--th:text="${bean.field + '!' + bean.field}">-->
                                     <div th:text="${func.funcId + '(' + func.funcDesc + ')'}"></div>
-                                    <!--<div th:text="${func.funcDesc}"></div>-->
                                 </div>
                             </div>
                         </div>
@@ -73,7 +71,7 @@
                 </div>
 
                 <div style="padding-top: 20px;">
-                    <input class="SmallButtonStyle pointer" style="min-width: 80px;" type="button" th:value="${#messages.msg('umps.adminfunc.common.print')}" />
+                    <input class="SmallButtonStyle pointer" style="min-width: 80px;" type="button" th:onclick="'print()'" th:value="${#messages.msg('umps.adminfunc.common.print')}" />
                     <a class="DisableLinkUnderline" th:href="@{/e-Services-2/management/updateFunctionGroup.do}">
                         <input class="SmallButtonStyle pointer" type="button" th:value="${#messages.msg('umps.adminfunc.func.eservices2.management.updatefuncgroup')}" />
                     </a>
